modules/sg/main.tf
locals {
  predefined_rules = {
    ssh = {
      type        = "ingress"
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    },
    http = {
      type        = "ingress"
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"],
      self        = true
    },
    https = {
      type        = "ingress"
      from_port   = 443
      to_port     = 443
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    },
    egress_all = {
      type        = "egress"
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }

  # Combine predefined and custom rules
  all_rules = concat(
    [for rule in var.addrule : local.predefined_rules[rule]],
    var.custom_rules
  )
}

resource "aws_security_group" "this" {
  vpc_id = var.vpc_id
  name   = var.name

  
  dynamic "ingress" {
    for_each = [for rule in local.all_rules : rule if rule.type == "ingress"]
    content {
      from_port   = ingress.value.from_port
      to_port     = ingress.value.to_port
      protocol    = ingress.value.protocol
      cidr_blocks = lookup(ingress.value, "cidr_blocks", null)  # Optional
      self        = lookup(ingress.value, "self", null)
    }
  }

  dynamic "egress" {
    for_each = [for rule in local.all_rules : rule if rule.type == "egress"]
    content {
      from_port   = egress.value.from_port
      to_port     = egress.value.to_port
      protocol    = egress.value.protocol
      cidr_blocks = egress.value.cidr_blocks
    }
  }

  tags = var.tags
}
